--- a/app/src/main/res/layout/activity_main_screen.xml
+++ b/app/src/main/res/layout/activity_main_screen.xml
@@ -10,8 +10,24 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="guru.wishingcamera.MainScreen">
 
-    <TextView
-        android:layout_width="wrap_content"
+    <Button
+        android:id="@+id/camera_action"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Hello World!" />
+        android:text="Camera"/>
+
+    <Button
+        android:id="@+id/message"
+        android:layout_below="@+id/camera_action"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Message"/>
+
+   <ImageView
+       android:id="@+id/image"
+       android:layout_below="@+id/message"
+       android:layout_width="match_parent"
+       android:layout_height="match_parent"
+       android:src="@mipmap/ic_launcher"/>
+
 </RelativeLayout>
