--- a/app/src/main/res/layout/activity_main_screen.xml
+++ b/app/src/main/res/layout/activity_main_screen.xml
@@ -27,7 +27,14 @@
        android:id="@+id/image"
        android:layout_below="@+id/message"
        android:layout_width="match_parent"
-       android:layout_height="match_parent"
+       android:layout_height="wrap_content"
        android:src="@mipmap/ic_launcher"/>
+
+    <Button
+        android:id="@+id/save"
+        android:layout_below="@+id/image"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Save"/>
 
 </RelativeLayout>
