--- a/app/src/main/res/layout/fragment_custom_message_dialog.xml
+++ b/app/src/main/res/layout/fragment_custom_message_dialog.xml
@@ -8,6 +8,6 @@
         android:id="@+id/custom_message"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:hint="@string/custom_messageg" />
+        android:hint="@string/custom_message" />
 
 </LinearLayout>
