--- a/app/src/main/res/layout/activity_main_screen.xml
+++ b/app/src/main/res/layout/activity_main_screen.xml
@@ -4,44 +4,55 @@
     android:id="@+id/activity_main_screen"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@mipmap/WPASES35"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="guru.wishingcamera.MainScreen">
 
+
+    <ImageView
+        android:id="@+id/image"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/camera_action"
+        android:layout_alignParentBottom="false"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true" />
+
     <Button
         android:id="@+id/camera_action"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Camera"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_above="@+id/message"
+        android:layout_centerHorizontal="true"
+        android:background="@android:color/darker_gray"
+        android:drawableLeft="@android:drawable/ic_menu_camera"
+        android:elevation="0dp"
+        android:text="Take a picture "
+        android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Title" />
 
     <Button
         android:id="@+id/message"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Wish us !!"
         android:layout_above="@+id/save"
-        android:layout_alignStart="@+id/save" />
-
-   <ImageView
-       android:id="@+id/image"
-       android:layout_width="match_parent"
-       android:layout_height="wrap_content"
-       android:src="@mipmap/us"
-       android:layout_alignParentStart="true"
-       android:layout_above="@+id/message"
-       android:layout_alignParentEnd="true"
-       android:layout_below="@+id/camera_action" />
+        android:layout_centerHorizontal="true"
+        android:drawableLeft="@android:drawable/btn_star"
+        android:text="Wish us !!"
+        android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Title" />
 
     <Button
         android:id="@+id/save"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Save"
         android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:background="@color/colorWhite"
+        android:drawableLeft="@android:drawable/ic_menu_save"
+        android:text="Save"
+        android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Title" />
 
 </RelativeLayout>
