--- a/app/src/main/res/layout/activity_main_screen.xml
+++ b/app/src/main/res/layout/activity_main_screen.xml
@@ -1,57 +1,99 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_main_screen"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="guru.wishingcamera.MainScreen">
-
+    android:background="@drawable/background"
+    android:orientation="vertical">
 
     <ImageView
-        android:id="@+id/image"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/camera_action"
-        android:layout_alignParentBottom="false"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_height="0dp"
+        android:layout_weight="4"
+        android:layout_margin="5dp"
+        android:id="@+id/image" />
 
-    <Button
-        android:id="@+id/camera_action"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/message"
-        android:layout_centerHorizontal="true"
-        android:background="@android:color/darker_gray"
-        android:drawableLeft="@android:drawable/ic_menu_camera"
-        android:elevation="0dp"
-        android:text="Take a picture "
-        android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Title" />
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@android:color/white"/>
 
-    <Button
-        android:id="@+id/message"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/save"
-        android:layout_centerHorizontal="true"
-        android:drawableLeft="@android:drawable/btn_star"
-        android:text="Wish us !!"
-        android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Title" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:padding="5dp">
 
-    <Button
+        <RelativeLayout
+            android:id="@+id/camera_action"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:padding="5dp"
+            android:layout_height="wrap_content">
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/camera_icon"
+                android:layout_centerHorizontal="true"
+                android:src="@drawable/ic_photo_camera_white_48dp"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/camera_icon"
+                android:layout_centerHorizontal="true"
+                android:text="Take a pic"/>
+        </RelativeLayout>
+
+        <View
+            android:layout_height="match_parent"
+            android:layout_width = "1dp"
+            android:background="@android:color/white"/>
+
+        <RelativeLayout
+            android:layout_height="wrap_content"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:padding="5dp"
+            android:id="@+id/message">
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/message_icon"
+                android:src="@drawable/ic_note_add_white_48dp"
+                android:layout_centerHorizontal="true"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/message_icon"
+                android:layout_centerHorizontal="true"
+                android:text="Message"/>
+        </RelativeLayout>
+    </LinearLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@android:color/white"/>
+
+    <RelativeLayout
+        android:layout_height="0dp"
+        android:layout_width="match_parent"
+        android:layout_weight="1"
         android:id="@+id/save"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:background="@color/colorWhite"
-        android:drawableLeft="@android:drawable/ic_menu_save"
-        android:text="Save"
-        android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Title" />
+        android:padding="5dp">
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/save_icon"
+            android:src="@drawable/ic_save_white_48dp"
+            android:layout_centerHorizontal="true"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/save_icon"
+            android:layout_centerHorizontal="true"
+            android:text="Save"/>
+    </RelativeLayout>
 
-</RelativeLayout>
+
+</LinearLayout>
