added the onresume method to redo the image when settings are changed. also added help button

--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -13,7 +13,7 @@
         android:title="Settings"
         android:showAsAction="never"/>
 
-    <item android:id="@+id/action_settings"
+    <item android:id="@+id/help"
         android:title="Help"
         android:showAsAction="never"/>
 </menu>
