--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -4,16 +4,15 @@
     <!-- "Mark Favorite", should appear as action button if possible -->
     <item android:id="@+id/clear_image"
         android:icon="@drawable/ic_clear_white_48dp"
-        android:title="Clear"
-        android:showAsAction="ifRoom"
+        android:title="@string/clear"
         app:showAsAction="ifRoom"/>
 
     <!-- Settings, should always be in the overflow -->
     <item android:id="@+id/action_settings"
-        android:title="Settings"
-        android:showAsAction="never"/>
+        android:title="@string/settings"
+        app:showAsAction="never"/>
 
     <item android:id="@+id/help"
-        android:title="Help"
-        android:showAsAction="never"/>
+        android:title="@string/help"
+        app:showAsAction="never"/>
 </menu>
